[gd_scene load_steps=5 format=3 uid="uid://ogtkyqn84yn8"]

[ext_resource type="Script" path="res://scenes/GUI/gui.gd" id="1_8lj6m"]
[ext_resource type="Theme" uid="uid://bx3rgbhg0k4eg" path="res://scenes/GUI/main_gui.tres" id="2_i57eb"]

[sub_resource type="LabelSettings" id="LabelSettings_4g40l"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_iakcg"]
font_size = 14

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_8lj6m")

[node name="MainGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_i57eb")

[node name="Panel" type="Panel" parent="MainGUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DayMarginContainer" type="MarginContainer" parent="MainGUI"]
layout_mode = 1
offset_right = 77.0
offset_bottom = 71.0
size_flags_horizontal = 0
mouse_filter = 2

[node name="DayPanelContainer" type="PanelContainer" parent="MainGUI/DayMarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainGUI/DayMarginContainer/DayPanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="DayLabel" type="Label" parent="MainGUI/DayMarginContainer/DayPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Day: 0"
horizontal_alignment = 1

[node name="CurrentDateLabel" type="Label" parent="MainGUI/DayMarginContainer/DayPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "March, 10, 2023"
label_settings = SubResource("LabelSettings_4g40l")
horizontal_alignment = 1

[node name="CheeseMarginContainer" type="MarginContainer" parent="MainGUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -71.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
mouse_filter = 2

[node name="CounterPanelContainer" type="PanelContainer" parent="MainGUI/CheeseMarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainGUI/CheeseMarginContainer/CounterPanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CheeseCounterLabel" type="Label" parent="MainGUI/CheeseMarginContainer/CounterPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cheese: 0"
horizontal_alignment = 1

[node name="CurrentCheeseCurrentLabel" type="Label" parent="MainGUI/CheeseMarginContainer/CounterPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current Cheese: 0"
label_settings = SubResource("LabelSettings_iakcg")
horizontal_alignment = 1

[node name="CheeseSlider" type="HSlider" parent="MainGUI/CheeseMarginContainer/CounterPanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
max_value = 1.0
value = 1.0

[node name="ScoreMarginContainer" type="MarginContainer" parent="MainGUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_bottom = 36.0
grow_horizontal = 0
size_flags_horizontal = 8
mouse_filter = 2

[node name="CounterPanelContainer" type="PanelContainer" parent="MainGUI/ScoreMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="MainGUI/ScoreMarginContainer/CounterPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1
